[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">= 3.8"
name = "ImageSorter"
version = "0.5"
dependencies = [
    "numpy==1.26.1",
    "Pillow==10.1.0",
]
authors = [
  {name = "Novitsky Daniil", email = "denni334334@gmail.com"},
]
readme = "readme.md"